k3s/management/portainer/service.yml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: management
spec:
  selector:
    app: portainer
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: http
