k3s/management/portainer/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer
  namespace: management
spec:
  ingressClassName: traefik
  rules:
    - host: $(PORTAINER_HOST)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portainer
                port:
                  number: 9000
